
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MODx 0.9.5 RC1 (rev 1901 - Nov 3, 2006)
====================================
* Remove a reference to legacy coolbuttons and fix header buttons on system event log (1901)
* Removed modx.js (webelm.js) and cb2.js scripts from header due to conflicts with other scripts. (1893)
* Stripped all CoolButton code and modified all buttons as CSS buttons. (1893)
* Added modified actionButtons class to CSS in each theme. (1893)
* Modified setParent function so that it does not use DynElement scripts. (1893)
* Fix eForm parsing error with spaces and multiple sessionVars and broken Thank You page (1890)
* Update Wayfinder to record references better: e.g., 6 to [~6~] (1885)
* Fix incorrect 1px top border on MODx Host menu (1797/1887)
* Update to Jot 1.0 release (1884)
* [FS#632] remove reference to "folder" in main english.inc.php (1870)
* Language file update to QuickEdit. (1865)
* [FS#611] Minor change to header location to prevent double-login that is affecting some server configs (doesn't have any adverse effect for configs not experiencing this problem). (1862)
* [FS#299] getUserLoginID() now returns manager user ID if a manager user is logged in the frontend. (1860)
* getLoginUserID() will allow the manager user language setting to override the main language setting if required. (1860)
* Fix reference to a non-existant event in getSettings(): 'OnBeforeManagerInit' - changed to 'OnBeforeManagerPageInit'. (1860)
* Modify OnBeforeManagerPageInit event to only run if manager user is logged into the backend. (1860)
* [FS#621] Minor corrections to MODx light theme (1868)
* Major cleanup of style.php files, tree.php and nodes.php (1866)
* Added new HTML Entities output widget for TVs (1858)
* Update eForm to 1.4.1
* Clarify File Manager vs. Resource Browser manager config options (1853)